Import of DAVEWOOD/Catalyst-ControllerRole-CatchErrors-0.05.tar.gz from CPAN.
gitpan-cpan-distribution: Catalyst-ControllerRole-CatchErrors
gitpan-cpan-version:      0.05
gitpan-cpan-path:         DAVEWOOD/Catalyst-ControllerRole-CatchErrors-0.05.tar.gz
gitpan-cpan-author:       DAVEWOOD
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.05  2015-01-15
+    * skip HTTP-exception test if Catalyst version < 5.90062
+
 0.04  2015-01-02
     * skip HTTP-exception test if Catalyst version < 5.90060
 
